--- a/jianshu_views/package.json
+++ b/jianshu_views/package.json
@@ -9,10 +9,14 @@
   "dependencies": {
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "default-passive-events": "^2.0.0",
     "element-ui": "^2.15.6",
+    "js-cookie": "^3.0.1",
+    "lodash": "^4.17.21",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
+    "vuex-persistedstate": "^4.1.0",
     "wangeditor": "^4.7.11"
   },
   "devDependencies": {
