--- a/jianshu_views/package.json
+++ b/jianshu_views/package.json
@@ -17,7 +17,9 @@
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
     "vuex-persistedstate": "^4.1.0",
-    "wangeditor": "^4.7.11"
+    "vxe-table": "^3.5.6",
+    "wangeditor": "^4.7.11",
+    "xe-utils": "^3.5.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
