--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
     "vuex-persistedstate": "^4.1.0",
-    "wangeditor": "^4.7.11",
-    "xe-utils": "^3.5.4"
+    "wangeditor": "^4.7.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^5.0.8",
