--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
+    "serve-prod": "vue-cli-service serve --mode production",
     "build": "vue-cli-service build"
   },
   "dependencies": {
